# android_collect

./: .gitignore  build.gradle  common.gradle  globalConfig.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json  googlex.json
app/keystores/: lon_sjzt2.jks  mytest.jks  mytestkey.jks
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_appsflyer_demo.xml  activity_components.xml  activity_coroutines_demo.xml  activity_customview.xml  activity_dot9test.xml  activity_google_ump.xml  activity_image_opt.xml  activity_login_facebook.xml  (+9 more)
app_firstcode3/: build.gradle
app_firstcode3/src/main/: AndroidManifest.xml
app_old/: build.gradle  channel.txt  smartcanteen.jks
app_old/src/main/: AndroidManifest.xml
app_old/src/main/assets/: TMFJSBridge.js  litepal.xml
cmakedemo/: CMakeLists.txt
cmakedemo/include/: head.h
cmakedemo/src/: main.cpp
cmakedemo/src/dylib/: CMakeLists.txt  动态库
cmakedemo/src/staticlib/: CMakeLists.txt  main.cpp  静态库
empty_app/: build.gradle
empty_app/libs/: ability_login_android_v1.2.0.aar
empty_app/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradletest/: build.gradle  readme.txt
gradletest/buildSrc/: build.gradle.kts
gradletest/gradle/wrapper/: gradle-wrapper.properties
module_base/: build.gradle
module_base/src/main/: AndroidManifest.xml
module_jni/: build.gradle
module_jni/src/main/: AndroidManifest.xml
module_jni/src/main/cpp/: CMakeLists.txt  HelloJni.cpp  JniDemo.cc  参考文章
modulesBase/lib_base/: build.gradle
modulesBase/lib_base/src/main/: AndroidManifest.xml
modulesBase/lib_jsbridge/: build.gradle
modulesBase/lib_jsbridge/src/main/: AndroidManifest.xml
modulesBase/lib_widget/: build.gradle
modulesBase/lib_widget/src/main/: AndroidManifest.xml
modulesBusiness/android_version/: build.gradle
modulesBusiness/android_version/src/main/: AndroidManifest.xml
modulesBusiness/guangdiantong/: build.gradle
modulesBusiness/guangdiantong/libs/: GDTActionSDK.min.1.8.6.aar
modulesBusiness/guangdiantong/src/main/: AndroidManifest.xml
modulesBusiness/login/: build.gradle
modulesBusiness/login/src/main/: AndroidManifest.xml
modulesBusiness/main/: build.gradle
modulesBusiness/main/src/main/: AndroidManifest.xml
modulesBusiness/mjetpack/: build.gradle
modulesBusiness/mjetpack/src/main/: AndroidManifest.xml
modulesBusiness/share/: build.gradle
modulesBusiness/share/src/main/: AndroidManifest.xml
modulesBusiness/toutiao/: build.gradle
modulesBusiness/toutiao/src/main/: AndroidManifest.xml
modulesJavalib/: build.gradle
modulesJavalib/assets/: base.docx
testapp/: build.gradle
testapp/src/main/: AndroidManifest.xml
(+377 files in other folders)
